# fast

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_main.py
